0028973: Undo/Redo changes the order of some attributes